[package]
name = "lighting-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"

[dependencies.luisa_compute]
git = "https://github.com/LuisaGroup/luisa-compute-rs/"
branch = "main"
